Wed Oct 21 19:55:01 2009  Lee Noar  <leenoar@sky.com>

	* som_final.c(module_finalisation): If things really
	go wrong and we end up with a negative client count,
	then we still want to be able to quit.

Tue Oct 13 19:35:23 2009  Lee Noar  <leenoar@sky.com>

	* som_runcom.c(read_ld_env): Looks like my logic
	got a bit mixed up here. Only worked for !runimage
	and *-bin. Simplify and fix.

Sun Oct 11 14:10:45 2009  Lee Noar  <leenoar@sky.com>

	New feature addition. Record basic details of last
	five clients to deregister. *SOMHistory displays
	the list. Useful for debugging when you need to know
	where an address lies within the client. If the
	client exits normally, then *SOMStatus will not show
	it. Saves having to keep commenting out
	SWI "SOM_DeregisterClient" in UnixLib to retain client
	data.

	* somanager.cmhg: Add *SOMHistory to command table.
	Bump module version number to V2.02.
	* som_command.c(module_command): Handle new command.
	* som_history.c, som_history.h: Implementation of new
	command.
	* som_register.c(som_deregister_client): Record details
	of deregistering clients.
	* som.h(som_globals): Add history list.
	* som_command.h: Make global strings more widely available.
	* Makefile.am: Add som_history.c to source files.

Fri Jul 04 20:04:09 2009  Lee Noar  <leenoar@sky.com>

	* somanager.cmhg: Add new SWI (SOM_Reloc) to SWI table,
	and remove redundant SWI (SOM_AddrToOffset).
	Bump module version number to V2.01 because of new SWI.
	* som_swihandler.c(module_swihandler): Add handler code
	for SWI "SOM_Reloc" and remove handler code for
	SWI "SOM_AddrToOffset".
	* som_utilswis.c, som_utilswis.h: Add code to implement
	SWI "SOM_Reloc" and remove code for SWI "SOM_AddrToOffset".
	* dist/!SharedLibs/SOM1stRun,feb: Require V2.01 of module.

	SWI "SOM_Reloc" allows a client to relocate an address
	that the dynamic loader has no knowledge of during
	initialisation. For example, some dwarf expressions, when